# todo-service

./: .env  .env.example  .gitignore  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml
bot/: Dockerfile  README.md  pyproject.toml
bot/app/: bot.py
bot/app/data/: config.py  locales.py
bot/app/dialogs/: __init__.py  common.py  show_mailing.py  stats.py
bot/app/dialogs/user/: __init__.py  choose_lang.py  menu.py  start_message.py  tasks.py
bot/app/filters/: __init__.py  admin.py  verified.py
bot/app/handlers/: __init__.py  mailing.py
bot/app/handlers/user/: __init__.py  lang.py  menu.py  start.py  start_data.py
bot/app/keyboards/: menu.py
bot/app/middlewares/: __init__.py  internal_services.py  lang.py  repo.py
bot/app/models/: __init__.py  admin.py  base.py  comment.py  task.py  user.py
bot/app/services/: repo.py
bot/app/services/dao/: __init__.py  base.py  comment.py  settings.py  tag.py  task.py  user.py
bot/app/services/internal/: __init__.py  base.py  comments.py  core.py
bot/app/states/: __init__.py  admin.py  user.py
bot/app/utils/: get_pydantic_list.py
bot/app/windows/: __init__.py  channel_delete_window.py  channel_info_window.py  create_task_window.py  data_changer.py  delete_referral_window.py  delete_task_window.py  task_info_window.py  user_info_window.py  withdraw_approve_window.py  withdraw_cancel_window.py  withdraw_info_window.py
bot/app/windows/listing/: __init__.py  base.py  channels_window.py  referrals_window.py  tasks_window.py  users_window.py  withdraw_window.py
comments/: Dockerfile  alembic.ini  pyproject.toml
comments/api/: __main__.py  conftest.py  gunicorn_runner.py  settings.py
comments/api/db/: base.py  dependencies.py  utils.py
comments/api/db/dao/: comment_dao.py
comments/api/db/migrations/: env.py
comments/api/db/migrations/versions/: 2024-09-08-22-18_15c7dd0825dc.py
comments/api/db/models/: __init__.py  comments.py
comments/api/services/todo_core/: crud.py  dependency.py
comments/api/web/: application.py  auth_bearer.py  lifetime.py
comments/api/web/api/: __init__.py  crudrouter.py  router.py
comments/api/web/api/comments/: __init__.py  schema.py  views.py
comments/api/web/api/redis/: schema.py  views.py
todo_core/: Dockerfile  pyproject.toml
todo_core/src/api/: permissions.py  urls.py  utils.py
todo_core/src/api/tags/: views.py
todo_core/src/api/tasks/: serializers.py  views.py
todo_core/src/api/users/: serializers.py  views.py
todo_core/src/apps/tags/: admin.py  models.py
todo_core/src/apps/tags/migrations/: 0001_initial.py  0002_alter_tag_options.py  0003_alter_tag_options_alter_tag_table.py
todo_core/src/apps/tasks/: admin.py  models.py
todo_core/src/apps/tasks/migrations/: 0001_initial.py  0002_remove_task_category_task_date_created_and_more.py  0003_alter_task_options.py  0004_alter_task_options_alter_task_table.py  0005_alter_task_tags.py  0006_alter_task_telegram_user.py
todo_core/src/apps/users/: admin.py  models.py
todo_core/src/apps/users/migrations/: 0001_initial.py  0002_alter_user_telegram_user.py  0003_alter_telegramuser_options_alter_user_options.py  0004_alter_telegramuser_options_alter_user_options_and_more.py  0005_telegramuser_language.py
todo_core/src/config/: settings.py
